# ift1166-template

./: README.md
tp3/: CMakeLists.txt  Makefile  comptBanc_test.cpp  ticTacToe.cpp  ticTacToe.h  ticTacToe_main.cpp  ticTacToe_test.cpp
tp3/script/: exe_compt_test.sh  exe_game.sh  exe_game_test.sh  linux_compile.sh  mac_compile.sh  windows_compile.bat  windows_exe_compt_test.bat  windows_exe_game_test.bat
